<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:contentDescription="@string/bgImage" />

    <RelativeLayout
        android:layout_width="332dp"
        android:layout_height="289dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:textColor="#FFFFFF"
            android:text="@string/name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/name"
            android:layout_marginEnd="13dp"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint="@string/hintName"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#696969" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textColor="#FFFFFF"
            android:text="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/userName"
            android:layout_centerVertical="true"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#696969" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textColor="#FFFFFF"
            android:text="@string/phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/userName"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint="@string/hintPhone"
            android:inputType="phone"
            android:textColor="#000000"
            android:textColorHint="#696969" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="332dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp">


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Save"
            android:textColor="#421D1D"
            android:textSize="15sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnSave"
            android:text="@string/Show"
            android:textColor="#421D1D"
            android:textSize="15sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />
    </RelativeLayout>

</RelativeLayout>